# elfdata

./: .gitignore  .travis.yml  Makefile  PRODUCT_NAME  README.md  demo  demo.c  elf.h  elfdata  elfdata.c  elflookup.h  pyelflookup.c  pyproject.toml  setup.py  tests.py  tox.ini
.github/workflows/: pypi.yaml  python-package.yml
